--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 </head>
 <body>
     <main>
-        <div class="main-head">
-            <h3>OUR TEAM</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in consequat.</p>
-        </div>
-        <div class="team-cards-grid">
-            <div class="team-card">
-                <div class="team-card-img">
-
-                </div>
-                <div class="team-card-info">
-                    
-                </div>
+        <div class="main-container">
+            <div class="main-head">
+                <h3>OUR TEAM</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in consequat.</p>
             </div>
+            <!-- Griglia Team Mates-->
+            <div class="team-cards-grid"> 
+                <!-- Gli elementi vengon predistosti in griglia dal nostro script jS-->
+            </div>
+             <!--/Griglia Team Mates-->
         </div>
     </main>
+    <!-- Script JS-->
     <script src="main.js"></script>
 </body>
 </html>
